<resources>
    <string name="app_name">MealSloth</string>
    <string name="login_request">Please login</string>
    <string name="login_button">Login</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="login_incorrect_credentials">Incorrect username or password</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_request">Sign up here!</string>
    <string name="signup_fields_required">All fields are required</string>
    <string name="email_invalid">Invalid email</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="password_too_short">Password must be at least 8 characters</string>
    <string name="firstname_lastname">%1$s %2$s</string>
    <string name="order_from_neighbors_kitchen">Order from your\nneighbor\'s kitchen</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_profile">My Profile</string>
    <string name="become_a_chef">Become a Chef</string>
    <string name="feedback">Feedback</string>
    <string name="continue_browsing">Continue Browsing</string>
    <string name="time_available">Available Time:</string>
    <string name="time_available_next">Next Available Time:</string>
    <string name="pickup_location">Pickup Location:</string>
    <string name="order_verb">Order</string>
    <string name="reviews_title">Reviews</string>
</resources>
