<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mealsloth.gryphon.activities.SignupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup_request"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/et_signup_email"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:singleLine="true"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:singleLine="true"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_signup_password_confirm"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:singleLine="true"
            android:hint="@string/hint_password_confirm"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup_button"
            android:onClick="signup"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/link_blue"
            android:text="@string/login_button"
            android:padding="10dp"
            android:clickable="true"
            android:onClick="backToLogin"/>

        <TextView
            android:id="@+id/tv_signup_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</RelativeLayout>
