<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mealsloth.gryphon.activities.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_request"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/hint_email"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/hint_password"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:singleLine="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_button"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:onClick="login"/>

        <TextView
            android:id="@+id/tv_login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</RelativeLayout>
